Add deployed pre-hook and script

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "scripts": {
     "build": "tsc",
+    "deploy": "node ./bin/server.js",
+    "predeploy": "yarn build",
     "start": "nodemon ./src/server.ts",
     "test": "jest ./tests",
     "test:unit": "jest ./tests/unit"
