Add integration test launch command for debugging purposes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,5 +16,17 @@
             "cwd": "${workspaceRoot}",
             "timeout": 10000
           },
+          {
+            "type": "node",
+            "request": "launch",
+            "name": "Run integration tests",
+            "runtimeExecutable": "yarn",
+            "runtimeArgs": [
+              "test:integration"
+            ],
+            "port": 5858,
+            "cwd": "${workspaceRoot}",
+            "timeout": 10000
+          },
     ]
 }
