--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "test:integration": "jest ./tests/integration"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "4.17.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "@types/supertest": "^2.0.11",
-    "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "@types/express": "4.17.13",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.21",
+    "@types/supertest": "2.0.11",
+    "jest": "27.5.1",
+    "nodemon": "2.0.15",
+    "supertest": "6.2.2",
+    "ts-jest": "27.1.3",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.2"
   }
 }
